[tool.poetry]
name = "streamlit-playground"
version = "0.1.0"
description = ""
authors = ["Miguel Costa <miguelptcosta1995@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
networkx = "^3.3"
plotly = "^5.24.1"
sympy = "^1.13.3"
scipy = "^1.14.1"
tqdm = "^4.66.5"
stqdm = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
